--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "json:server": "json-server --watch surveys.json",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postbuild":"ng build"
+    "heroku-postbuild": "ng build"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~14.2.8",
-    "@angular/compiler-cli": "^14.2.0",
     "@angular/animations": "^14.2.0",
+    "@angular/cli": "~14.2.8",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
+    "@angular/compiler-cli": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
@@ -25,13 +25,15 @@
     "@fortawesome/fontawesome-free": "^6.2.0",
     "bootstrap": "^5.2.2",
     "dev-server": "^0.2.0",
+    "express": "^4.18.2",
     "jquery": "^3.6.1",
     "json-server": "^0.17.1",
+    "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.8",
@@ -49,7 +51,7 @@
     "typescript": "~4.7.2"
   },
   "engines": {
-    "node":"18.12.1",
-    "npm":"8.19.2"
+    "node": "18.12.1",
+    "npm": "8.19.2"
   }
 }
