--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "survey",
   "version": "0.0.0",
   "scripts": {
+    "ng": "ng",
     "start": "node server.js",
+    "build": "ng build",
     "json:server": "json-server --watch surveys.json",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
     "heroku-postbuild": "ng build"
   },
   "private": true,
