--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "bootstrap": "^5.2.2",
     "dev-server": "^0.2.0",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.6.1",
     "json-server": "^0.17.1",
+    "jspdf": "^2.5.1",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
